--- a/app/frontend/app/templates/dashboard.hbs
+++ b/app/frontend/app/templates/dashboard.hbs
@@ -93,6 +93,38 @@
         </div>
       </div>
       }}
+      <div class="community-widget-panel trending-group-panel">
+        <div class="panel-heading">
+          <h3 class="panel-title">Trending Groups</h3>
+        </div>
+
+        <div class="panel-body">
+          <ul class="latest-post-list">
+            <li>
+              <div class="group-wrapper" style="background: url(http://freedwallpaper.com/wp-content/uploads/2014/12/anime-girl-background-hd-desktop-wallpaper.jpg) center;">
+                <div class="group-widget-top">
+                  <div class="group-avatar">
+                    <img src="http://media.animevice.com/uploads/0/9459/351731-_animepaper.net_avatar_standard_anime_kobato_kari_kobato__magic_bubbles__187987_yamaro_preview_076630ac_super.jpg">
+                  </div>
+                  <div class="group-info">
+                    <h4>Test Group</h4>
+                    <small>1 members</small>
+                  </div>
+                </div>
+                <div class="group-cta">
+                  <button class="btn btn-default suggestion-button">
+                    Join Group
+                  </button>
+                </div>
+                <div class="overlay"></div>
+              </div>
+            </li>
+            <li class="latest-post-more">
+              <a href="https://forums.hummingbird.me/c/industry-news" data-bindattr-1973="1973">Show more</a>
+            </li>
+          </ul>
+        </div>
+      </div>
 
       {{community-widget title="Industry news" showMoreURL="https://forums.hummingbird.me/c/industry-news" apiCall="https://forums.hummingbird.me/c/industry-news.json"}}
       <div class="feed-sm-sidebar-advert">
