fix up save button, only show View All button if > 14 members

--- a/app/frontend/app/templates/group.hbs
+++ b/app/frontend/app/templates/group.hbs
@@ -64,7 +64,7 @@
               {{! edit button }}
               {{#if isAdmin}}
                 {{#if showEditMenu}}
-                  <button class="btn btn-default btn-lg save edit-group" {{action "saveEditMenu"}}>
+                  <button class="btn btn-default btn-lg follow-button save edit-group" {{action "saveEditMenu"}}>
                     <i class="fa fa-pencil"></i> Save
                   </button>
                 {{else}}
