Implement user.groups page

--- a/app/frontend/app/templates/user.hbs
+++ b/app/frontend/app/templates/user.hbs
@@ -84,6 +84,9 @@
           {{#link-to 'user.library'}}Library{{/link-to}}
         </li>
         <li class="nav-link">
+          {{#link-to 'user.groups'}}Groups{{/link-to}}
+        </li>
+        <li class="nav-link">
           {{#link-to 'user.reviews'}}Reviews{{/link-to}}
         </li>
         <li class="nav-link">
