Hook up join button in group-box component

--- a/app/frontend/app/templates/components/group-box.hbs
+++ b/app/frontend/app/templates/components/group-box.hbs
@@ -10,9 +10,9 @@
   </div>
   <div class="group-cta">
     {{#unless userIsMemberOfGroup}}
-      <button class="btn btn-default suggestion-button">
+      <button class="btn btn-default suggestion-button" {{action 'joinGroup'}}>
         Join Group
-      </button> 
+      </button>
     {{/unless}}
   </div>
   <div class="overlay"></div>
