Fix apps header
Fixing apps header at width <=624

From: http://puu.sh/fDMUV/3000101f8b.jpg
To: http://puu.sh/fDMPl/879d68ae15.jpg

--- a/app/assets/stylesheets/partials/apps-page.css.scss
+++ b/app/assets/stylesheets/partials/apps-page.css.scss
@@ -4,6 +4,12 @@
   background-size: cover;
   color: #fff;
   padding-top: 50px;
+  .container {
+    @media (max-width: 624px) {
+    position: relative;
+    bottom: 55px;
+    }
+  }
   h1 {
     font-size: 50px;
     margin-bottom: 30px;
