--- a/app/frontend/app/templates/story/comment.hbs
+++ b/app/frontend/app/templates/story/comment.hbs
@@ -41,7 +41,7 @@
   </div>
   <div class="row">
     <div class="post-content clearfix">
-      {{#if collapsed}}  
+      {{#if collapsed}}
         <a {{action "showCollapsedPost"}}>Show NSFW Content</a>
       {{else}}
         <p {{bind-attr class=":comment-text isExpanded:full-post" }}>
@@ -142,9 +142,19 @@
       </div>
     {{/each}}
     {{#if currentUser.isSignedIn}}
-      <div class="reply-form">
-        {{expanding-textarea value=reply rows="1" placeholder="Leave a comment..." enterAction="submitReply"}}
-      </div>
+      {{#if group}}
+        {{#if group.currentMember}}
+          {{#unless group.currentMember.pending}}
+            <div class="reply-form">
+              {{expanding-textarea value=reply rows="1" placeholder="Leave a comment..." enterAction="submitReply"}}
+            </div>
+          {{/unless}}
+        {{/if}}
+      {{else}}
+        <div class="reply-form">
+          {{expanding-textarea value=reply rows="1" placeholder="Leave a comment..." enterAction="submitReply"}}
+        </div>
+      {{/if}}
     {{/if}}
   {{/if}}
 </div>
