Add beta blockages for Groups
Also fix "Aproval"
And before you ask, I didn't indent because the conditionals are
temporary and I didn't wanna break the git blame

--- a/app/frontend/app/templates/components/group-box.hbs
+++ b/app/frontend/app/templates/components/group-box.hbs
@@ -12,7 +12,7 @@
     {{#if userIsMemberOfGroup}}
       {{#link-to 'group.index' group classNames="btn btn-default suggestion-button" tagName="button"}}
         {{#if userMembershipIsPending}}
-            Aproval Pending...
+            Approval Pending...
         {{else}}
             Visit Group
         {{/if}}
