--- a/app/frontend/app/templates/dashboard.hbs
+++ b/app/frontend/app/templates/dashboard.hbs
@@ -94,6 +94,7 @@
       </div>
       }}
 
+      {{#if currentUser.betaAccess}}
       <div class="community-widget-panel trending-group-panel">
         <div class="panel-heading">
           <h3 class="panel-title">Trending groups</h3>
@@ -111,6 +112,7 @@
           </ul>
         </div>
       </div>
+      {{/if}}
 
       {{community-widget title="Industry news" showMoreURL="https://forums.hummingbird.me/c/industry-news" apiCall="https://forums.hummingbird.me/c/industry-news.json"}}
       <div class="feed-sm-sidebar-advert">
