Fix QU gradient for Firefox

--- a/app/assets/stylesheets/components/quick-update.css.scss
+++ b/app/assets/stylesheets/components/quick-update.css.scss
@@ -67,7 +67,7 @@
 
     .overlay-panel {
       background-image: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .80) 50%, rgba(0, 0, 0, .80) 100%);
-      background-size: 200%;
+      background-size: auto 200%;
       background-repeat: repeat-x;
       border-radius: 3px;
       text-align: center;
