Add license to sidebar footer for tenpenchii

--- a/app/frontend/app/templates/dashboard.hbs
+++ b/app/frontend/app/templates/dashboard.hbs
@@ -132,7 +132,7 @@
         {{#link-to 'apps'}}Apps{{/link-to}} &middot;
         <a href="mailto:josh@hummingbird.me">Contact</a> &middot;
         <a href="https://github.com/hummingbird-me/hummingbird">GitHub</a>
-        <br /> &copy; 2015 by Hummingbird Media Inc.
+        <br />Except where otherwise noted, content on this site is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.
       </div>
     </div>
 
