Fix various bugs introduced by search refactoring
Fix waifu selector dropdown titles

Fix search in favorites adding wrong anime/manga.

Quick fix for not using large images in fav edit preview.

Not display already faved media in favorite box search

Use medium images for search results (smaller images are broken)

Fix title of search results in the header instant search.

--- a/app/frontend/app/templates/components/favorite-container.hbs
+++ b/app/frontend/app/templates/components/favorite-container.hbs
@@ -21,7 +21,7 @@
             {{#if isEditing}}
               <li class="grid-list grid-draggable clearfix" {{bind-attr data-id=favorite.id}}>
                 {{!-- <span class="grid-position">{{favorite.favRank}}</span> --}}
-                <img class="grid-list-thumb" {{bind-attr src=favorite.item.posterImage}} />
+                <img class="grid-list-thumb" {{bind-attr src=favorite.item.posterImageThumb}} />
                 <span class="grid-list-title">{{favorite.item.displayTitle}}</span>
                 <span class="grid-position" {{action 'deleteFavorite' favorite}}><i class="fa fa-times-circle"></i></span>
               </li>
