Adjust header for displaying more notifications

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -171,7 +171,7 @@ html { overflow-y: auto; }
 
       a {
         width: 100% !important;
-        padding: 15px !important;
+        padding: 8px 15px !important;
 
         &:hover {
           color: #999999 !important;
