--- a/app/frontend/app/templates/notifications.hbs
+++ b/app/frontend/app/templates/notifications.hbs
@@ -1,11 +1,33 @@
 <div class="container">
   <div class="row" style="margin-top: 50px">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-10 col-md-offset-1">
       <ul class="all-notifications">
-        {{#each}}
-          {{partial "notification"}}
+        {{#each notification in model}}
+          <div {{bind-attr class=":notification-item notification.read::new"}}>
+            <div class="notification-title">
+              <div class="avatar">
+                {{avatar notification.sourceUser 'thumb_small'}}
+              </div>
+              <div class="content">
+                <span class="who">
+                  {{notification.sourceUser.username}}
+                </span>
+
+                is awesome.
+              </div>
+            </div>
+            <div class="notification-options">
+              <div class="mark-read pull-right btn btn-default btn-xs" {{action 'markAsRead' notification.id}}>
+                <i class="fa fa-check"></i>
+              </div>
+              <div class="time">{{time-ago time=createdAt}}</div>
+            </div>
+          </div>
         {{/each}}
       </ul>
+      <div class="mark-read-all pull-right btn btn-default" {{action 'markAllAsRead'}}>
+        <i class="fa fa-check"></i> Mark all as read
+      </div>
     </div>
   </div>
 </div>
