--- a/app/frontend/app/templates/header/notifications.hbs
+++ b/app/frontend/app/templates/header/notifications.hbs
@@ -10,7 +10,7 @@
     {{#each limitedNotifications}}
       {{partial "notification"}}
     {{else}}
-      <li class="no-notifications">
+      <li class="notification no-notifications">
         <span>You don't have any notifications yet.</span>
       </li>
     {{/each}}
