--- a/app/frontend/app/templates/header.hbs
+++ b/app/frontend/app/templates/header.hbs
@@ -39,14 +39,19 @@
           <li><a href='/anime'>What's Trending</a></li>
           <li><a href='/anime/filter/all'>Explore Anime</a></li>
           <li><a href='/anime/upcoming'>Upcoming</a></li>
-          {{#if currentUser.betaAccess}}
-          <li>{{#link-to 'groups'}}Explore Groups{{/link-to}}</li>
-          {{/if}}
         </ul>
       </li>
 
       <li class='dropdown'>
-        <a href="https://forums.hummingbird.me">Community</a>
+        <a class='dropdown-toggle' data-toggle='dropdown'>
+          Community
+        </a>
+        <ul class='dropdown-menu left-nav-section'>
+          {{#if currentUser.betaAccess}}
+            <li>{{#link-to 'groups'}}Groups{{/link-to}}</li>
+          {{/if}}
+          <li><a href="https://forums.hummingbird.me">Forums</a></li>
+        </ul>
       </li>
       <li class='dropdown'>
         {{#link-to 'apps'}}Apps{{/link-to}}
