add caret to dropdown header

--- a/app/frontend/app/templates/header.hbs
+++ b/app/frontend/app/templates/header.hbs
@@ -44,7 +44,7 @@
 
       <li class='dropdown'>
         <a class='dropdown-toggle' data-toggle='dropdown'>
-          Community
+          Community <b class='caret'></b>
         </a>
         <ul class='dropdown-menu left-nav-section'>
           {{#if currentUser.betaAccess}}
