--- a/app/frontend/app/templates/components/group-box.hbs
+++ b/app/frontend/app/templates/components/group-box.hbs
@@ -8,20 +8,22 @@
       <small>{{pluralize group.memberCount "member" "members"}}</small>
     </div>
   </div>
-  <div class="group-cta">
-    {{#if userIsMemberOfGroup}}
-      {{#link-to 'group.index' group classNames="btn btn-default suggestion-button" tagName="button"}}
-        {{#if userMembershipIsPending}}
-            Approval Pending...
-        {{else}}
-            Visit Group
-        {{/if}}
-      {{/link-to}}
-    {{else}}
-      <button class="btn btn-default suggestion-button" {{action 'joinGroup'}}>
-        Join Group
-      </button>
-    {{/if}}
-  </div>
+  {{#if currentUser.isSignedIn}}
+    <div class="group-cta">
+      {{#if userIsMemberOfGroup}}
+        {{#link-to 'group.index' group classNames="btn btn-default suggestion-button" tagName="button"}}
+          {{#if userMembershipIsPending}}
+              Approval Pending...
+          {{else}}
+              Visit Group
+          {{/if}}
+        {{/link-to}}
+      {{else}}
+        <button class="btn btn-default suggestion-button" {{action 'joinGroup'}}>
+          Join Group
+        </button>
+      {{/if}}
+    </div>
+  {{/if}}
   <div class="overlay"></div>
 </div>
