Make profiles look slightly less crap on mobile

--- a/app/assets/stylesheets/partials/user-cover-image.css.scss
+++ b/app/assets/stylesheets/partials/user-cover-image.css.scss
@@ -289,6 +289,11 @@
         background: rgba(255,255,255,.3);
       }
     }
+    @media (max-width: 694px) {
+      padding: 7px 20px;
+      overflow: auto;
+      bottom: 0;
+    }
   }
 }
 
