--- a/app/frontend/app/templates/user/index.hbs
+++ b/app/frontend/app/templates/user/index.hbs
@@ -50,7 +50,7 @@
             </div>
           {{else}}
             {{#if hasAboutSection}}
-              <p class="about"> {{user.aboutDisplay}}</p>
+              <p class="about"> {{{user.aboutDisplay}}}</p>
               <div class="user-interests">
                 <ul>
                   <li>
