Show group box on permalink pages

--- a/app/frontend/app/templates/story/permalink.hbs
+++ b/app/frontend/app/templates/story/permalink.hbs
@@ -26,6 +26,9 @@
             {{user.truncatedBio}}
           </p>
         </div>
+        {{#if group}}
+          {{group-box group=group}}
+        {{/if}}
       </div>
 
       {{#unless currentUser.isSignedIn}}
