Add group join rate to kotodama

--- a/app/frontend/app/templates/kotodama.hbs
+++ b/app/frontend/app/templates/kotodama.hbs
@@ -39,6 +39,7 @@
               <tr><td>Feed posts</td><td>{{feedposts}}</td></tr>
               <tr><td>Feed updates</td><td>{{feedcomments}}</td></tr>
               <tr><td>Feed likes</td><td>{{feedlikes}}</td></tr>
+              <tr><td>Group joins</td><td>{{groupjoins}}</td></tr>
             </tbody>
           </table>
         </div>
